fixed login/register on mobile devices
also tried to center flash messages on mobile

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -260,7 +260,7 @@ body {
 .history-container {
   border: 1px solid rgba(0, 0, 0, 0.144);
   border-radius: 10px;
-  height: 500px; /* Adjusted to a percentage value */
+  height: 500px; 
   min-width: 400px;
   box-sizing: border-box;
   overflow-y: scroll;
@@ -381,7 +381,6 @@ body {
   .welcome-section{ 
     max-width: 650px;
     margin: auto;
-
   }
 
   .welcome-section p {
@@ -392,10 +391,8 @@ body {
     font-size: 17px;
   }
 
-  .chatbox-container,
-  .history-container,
-  .history-conversation {
-    max-width: 550px;
+  .chatbox-container {
+    max-width: 450px;
     margin: auto;
   }
 
@@ -422,6 +419,20 @@ body {
 
   .chatbox-message p {
     font-size: 12px;
+  }
+
+  .login-container {
+    max-width: 450px;
+  }
+
+  .login-buttons {
+    max-width: 400px;
+  }
+
+  .flashes {
+    position: fixed;
+    top: 20px;
+    left: 40%;
   }
 }
 
